<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Woop</string>
	<string name="hello">Hello woop!</string>
	<string name="action_search">Settings</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_woop">WoopActivity</string>
	<string name="title_activity_search">SearchActivity</string>
	<string name="title_activity_alogin">ALogin</string>
	<string name="title_activity_aregistration">Sign Up</string>
  <string name="title_activity_ahome">Home</string>
  
	<string name="select_gender">Please select</string>
	
	<string name="hint_login_email">E-mail address</string>
	<string name="hint_login_password">Password</string>
	<string name="hint_register_email">E-mail address</string>
	<string name="hint_register_firstname">First name</string>
	<string name="hint_register_lastname">Last name</string>
	<string name="hint_register_nickname">Nick name</string>
	<string name="hint_register_password">Password</string>
	<string name="hint_register_password_conf">Confirm Password</string>

	<string-array name="spin_gender">
		<item>Man</item>
		<item>Woman</item>
	</string-array>

	<string name="btn_act_login">Login</string>
	<string name="btn_act_register">Sign Up</string>
	<string name="title_activity_ahome">AHome</string>

	
	<!-- -->
	<string name="ahome_welcome">Welcome</string>
</resources>