<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".ARegistration" >

	<EditText
		android:id="@+id/edt_registration_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:layout_marginRight="19dp"
		android:layout_marginTop="51dp"
		android:ems="10"
		android:hint="@string/hint_register_email"
		android:inputType="textEmailAddress" />

	<EditText
		android:id="@+id/edt_registration_firstname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/edt_registration_email"
		android:layout_below="@+id/edt_registration_email"
		android:ems="10"
		android:hint="@string/hint_register_firstname"
		android:inputType="textPersonName" />

	<EditText
		android:id="@+id/edt_registration_lastname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/edt_registration_firstname"
		android:layout_below="@+id/edt_registration_firstname"
		android:ems="10"
		android:hint="@string/hint_register_lastname"
		android:inputType="textPersonName" >

		<requestFocus />
	</EditText>

	 <EditText
    android:id="@+id/edt_registration_nickname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/edt_registration_lastname"
    android:layout_below="@+id/edt_registration_lastname"
    android:ems="10"
    android:hint="@string/hint_register_nickname"
    android:inputType="textPersonName" >

    <requestFocus />
  </EditText>

  <Spinner
    android:id="@+id/spi_registration_gender"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_toRightOf="@+id/btn_act_register" />

	<Button
		android:id="@+id/btn_act_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/edt_registration_password_conf"
		android:layout_below="@+id/edt_registration_password_conf"
		android:text="Button" />

	<EditText
		android:id="@+id/edt_registration_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/tex_registration_gender"
		android:layout_below="@+id/spi_registration_gender"
		android:layout_marginTop="41dp"
		android:ems="10"
		android:hint="@string/hint_register_password"
		android:inputType="textPassword" />

	<EditText
		android:id="@+id/edt_registration_password_conf"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/edt_registration_password"
		android:layout_below="@+id/edt_registration_password"
		android:ems="10"
		android:hint="@string/hint_register_password_conf"
		android:inputType="textPassword" />

	<TextView
		android:id="@+id/tex_registration_gender"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/edt_registration_nickname"
		android:layout_centerVertical="true"
		android:text="Gender" />


</RelativeLayout>