<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".ALogin" >

    <EditText
    	android:id="@+id/edt_login_email"
    	android:inputType="textEmailAddress|textAutoComplete"
    	android:hint="@string/hint_login_email"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_centerHorizontal="true"
    	android:layout_marginTop="110dp"
    	android:ems="10" >

    	<requestFocus />
    </EditText>

    <EditText
    	android:id="@+id/edt_login_password"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/edt_login_email"
    	android:layout_below="@+id/edt_login_email"
    	android:layout_marginTop="18dp"
    	android:ems="10"
    	android:hint="@string/hint_login_password"
    	android:inputType="textPassword" />

    <Button
    	android:id="@+id/btn_act_login"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/edt_login_password"
    	android:layout_alignRight="@+id/edt_login_password"
    	android:layout_below="@+id/edt_login_password"
    	android:layout_marginTop="18dp"
    	android:text="@string/btn_act_login" />

    <Button
    	android:id="@+id/btn_gt_register"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/btn_act_login"
    	android:layout_alignRight="@+id/btn_act_login"
    	android:layout_below="@+id/btn_act_login"
    	android:layout_marginTop="16dp"
    	android:text="@string/btn_act_register" />

</RelativeLayout>
